--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,14 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/kirbyDancer.js"></script>
+    <script src="src/pikaDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKirbyDancer">add a pinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">SMASH</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKirbyDancer">NOM</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makePikaDancer">ZAP</a>
     </div>
     <script src="src/init.js"></script>
   </body>
