--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,6 +12,7 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
+      <a href="#" class="lineup">Line 'em up!</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">SMASH</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKirbyDancer">NOM</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makePikaDancer">ZAP</a>
