Implement dancer interaction

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,8 +11,11 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <span class="title">Super Subclass Bros.</span>
       <a href="#" class="lineup">Line 'em up!</a>
+      <div href="#" class="choices">Choose your character:</div>
+      <a href="#" class="characterButton" data-dancer-maker-function-name="makeKirbyDancer">Kirby</a>
+      <a href="#" class="characterButton" data-dancer-maker-function-name="makePikaDancer">Pikachu</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">SMASH</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKirbyDancer">NOM</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makePikaDancer">ZAP</a>
